# mfcg2023

./: CMakeLists.txt  Cmake.txt  README.md  donut.h  main.cpp  main1.cpp  vector.h
Images/: im1.ppm  im2.ppm  image.ppm  image1.ppm
Main/: main.cpp
Main2/: main1.cpp
images/: hyp.ppm
includes/: camera.h  material.h  vec3.h
includes/Math/: vector.h
